syntax = "proto3";
package enf1.enf1.v1beta1;

option go_package = "github.com/enflow.io/enf1/x/enf1/types";

import "gogoproto/gogo.proto";

message MsgAction {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  bytes receiver = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string amount = 4;
  string denom = 5;
}

